Fixing tagline alignment

--- a/src/app/dashboard/component/dashboard.component.css
+++ b/src/app/dashboard/component/dashboard.component.css
@@ -3,9 +3,8 @@
 }
 
 .jumbotron {
-    background: url("../../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") no-repeat center center;
+    background: url("../../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") center center no-repeat;
     background-size: cover;
-    height: 31%;
 }
 
 table {
@@ -33,11 +32,11 @@ button {
     color: #4BBEFD;
 }
 
-.display-4 {
-    margin-top: 15px;
-    font-family: "Comic Sans MS", cursive, sans-serif;
-}
-
 .display-2 {
     color: ghostwhite;
+}
+
+.mat-cell {
+    text-align: center;
+    justify-content:center;
 }
