--- a/src/app/help/help.component.css
+++ b/src/app/help/help.component.css
@@ -1,7 +1,6 @@
 .jumbotron {
-    background: url("../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") no-repeat center center;
+    background: url("../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") center center no-repeat;
     background-size: cover;
-    height: 31%;
 }
 
 .display-4 {
