--- a/src/app/tracking-system/tracking-system/tracking-system.component.css
+++ b/src/app/tracking-system/tracking-system/tracking-system.component.css
@@ -1,7 +1,10 @@
+.filter-top {
+    margin-top: 1rem !important;
+}
+
 .jumbotron {
-    background: url("../../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") no-repeat center center;
+    background: url("../../../assets/DTL_website_banner_2020_FINAL_WEB.jpg") center center no-repeat;
     background-size: cover;
-    height: 31%;
 }
 
 table {
